--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   background-image: linear-gradient(90deg, #002F52 35%, #326589 165%);
 }
 
-.App-header{
-  background-color: #FFFFFF;
-  display: flex;
+li{
+  list-style: none;
 }
+  
